Fixed horizontal scrollbar height

--- a/resources/style/remake/global.scss
+++ b/resources/style/remake/global.scss
@@ -131,6 +131,7 @@ details[open] > summary::-webkit-details-marker {
 // Custom scrollbar style
 ::-webkit-scrollbar {
   width: 0.5rem;
+  height: 0.5rem;
   padding: 0.125rem;
 }
 
